--- a/src/app/pill-details/pill-details.component.html
+++ b/src/app/pill-details/pill-details.component.html
@@ -16,8 +16,7 @@
     <!-- Confirm Dialog -->
 
     <!-- Print Button -->
-    <button pButton type="button" label="طباعة الفاتورة" icon="pi pi-print"
-      (click)="onPrintButtonClick()"
+    <button pButton type="button" label="طباعة الفاتورة" icon="pi pi-print" (click)="onPrintButtonClick()"
       [disabled]="isPrinting" class="fs-6 rounded-4"></button>
 
     <!-- <button
@@ -44,8 +43,7 @@
     <ng-container>
       <div class="card px-4 py-2 my-2" *ngFor="let item of branchDetails">
         <div class="card-img">
-          <img src="assets/images/logo-with-white-bg.png"
-            alt="Placeholder Logo" />
+          <img src="assets/images/logo-with-white-bg.png" alt="Placeholder Logo" />
         </div>
         <h5>
           <i class="fas fa-file-alt main-color fs-4 ps-2"></i>معلومات الفرع
@@ -96,8 +94,7 @@
         <p>
           <span class="fw-bold">رقم المرتجع :</span> {{ item.invoice_number }}
         </p>
-        <a class="text-decoration-underline mb-3"
-          [routerLink]="'/pill-details/' + invoices[0].original_invoice_id"
+        <a class="text-decoration-underline mb-3" [routerLink]="'/pill-details/' + invoices[0].original_invoice_id"
           routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 
           <span class="fw-bold">رقم الإيصال :</span> {{
@@ -141,9 +138,9 @@
         <span class="fw-bold">الاسم :</span>
         {{ addresDetails.client_name }}
       </p>
-      <p *ngIf="addresDetails?.address || addresDetails?.branch_name">
+      <p *ngIf="addresDetails?.client_address || addresDetails?.branch_name">
         <span class="fw-bold">العنوان :</span>
-        {{ addresDetails?.address || 'غير متوفر' }}
+        {{ addresDetails?.client_address || 'غير متوفر' }}
         <span *ngIf="addresDetails?.branch_name">, {{ addresDetails?.branch_name
           }}</span>
       </p>
@@ -163,18 +160,15 @@
       <div class="accordion accordion-flush" id="accordionFlushExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingOne">
-            <button class="accordion-button collapsed" type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseOne" aria-expanded="false"
-              aria-controls="flush-collapseOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
               <h5>
                 <i class="fas fa-file-alt main-color fs-4 ps-2"></i> تفاصيل
                 الطلب
               </h5>
             </button>
           </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse show"
-            aria-labelledby="flush-headingOne"
+          <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne"
             data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
               <div *ngFor="let item of orderDetails[0]"
@@ -190,8 +184,7 @@
                   <h6 class="text-muted mx-5 fw-medium" *ngIf="item.size">
                     الحجم: {{ item.size }}
                   </h6>
-                  <h6 class="text-muted mx-5 fw-medium"
-                    *ngIf="item.addons.length>0"> الاضافات :
+                  <h6 class="text-muted mx-5 fw-medium" *ngIf="item.addons.length>0"> الاضافات :
                     <span *ngFor="let addon of item.addons; let last = last">
                       <span>{{ addon.addon_name }}<span *ngIf="!last">،
                         </span></span>
@@ -242,8 +235,7 @@
         <!-- Show selected status -->
       </div>
 
-      <div class="d-flex justify-content-between align-items-center py-3"
-        *ngIf="invoices && invoices.length > 0">
+      <div class="d-flex justify-content-between align-items-center py-3" *ngIf="invoices && invoices.length > 0">
         <h5 class="mb-0" *ngIf="invoices[0].transactions.length == 1">
           <span class="badge bg-success text-white">
             الدفع :
@@ -262,11 +254,9 @@
         </div>
       </div>
       <!-- Cash - visa -->
-      <div
-        *ngIf="invoices && invoices.length > 0 && invoices[0]?.transactions?.length > 1">
+      <div *ngIf="invoices && invoices.length > 0 && invoices[0]?.transactions?.length > 1">
         <div *ngFor="let inv of invoices[0]?.transactions">
-          <div
-            class="d-flex justify-content-between align-items-center my-1 fw-bold"
+          <div class="d-flex justify-content-between align-items-center my-1 fw-bold"
             *ngIf="invoices[0]?.transactions[0]?.payment_status == 'paid'">
             <div>
               {{ inv.payment_method === "cash" ? " الكاش" : " الفيزا" }}
@@ -308,8 +298,7 @@
           </span>
         </h6>
       </div>
-      <div class="d-flex justify-content-between px-2 mb-1"
-        *ngIf="item.service_percentage">
+      <div class="d-flex justify-content-between px-2 mb-1" *ngIf="item.service_percentage">
         <h6>
           رسوم الخدمة
           <span class="main-color">
@@ -321,8 +310,7 @@
         </h6>
       </div>
 
-      <div class="d-flex justify-content-between px-2 mb-1"
-        *ngIf="item.delivery_fees">
+      <div class="d-flex justify-content-between px-2 mb-1" *ngIf="item.delivery_fees">
         <h6>رسوم التوصيل</h6>
         <h6>
           <span>{{ item.delivery_fees }} {{ item.currency_symbol }}</span>
@@ -418,8 +406,7 @@
     <div class="px-4 py-2 my-2" *ngFor="let item of branchDetails">
       <div class="text-center border-bottom-dotted mb-4">
         <div class="card-img">
-          <img src="assets/images/logo-with-white-bg.png" alt="مطعم الكوت"
-            class="img-fluid" />
+          <img src="assets/images/logo-with-white-bg.png" alt="مطعم الكوت" class="img-fluid" />
           @if (isFinal) {
           <p class="final mt-1">نهائي</p>
           }
@@ -503,8 +490,7 @@
           <tr>
             <th scope="col">الصنف</th>
             <th scope="col">الكمية</th>
-            <th scope="col"
-              *ngIf="test && (!showPrices || showPrices)">السعر</th>
+            <th scope="col" *ngIf="test && (!showPrices || showPrices)">السعر</th>
             <th scope="col" *ngIf="test && (!showPrices || showPrices)">
               الاجمالي
             </th>
@@ -564,8 +550,7 @@
       </tbody>
     </table> -->
       <ng-container>
-        <div class="total-data border-bottom-dotted mb-3"
-          *ngFor="let item of invoiceSummary">
+        <div class="total-data border-bottom-dotted mb-3" *ngFor="let item of invoiceSummary">
           <div *ngIf="showPrices && test">
             <div class="d-flex justify-content-between align-items-center mb-2">
               <h6 class="fw-bold">الاجمالي:</h6>
@@ -584,8 +569,7 @@
               </h6>
               <span>-{{ item.coupon_value }} {{ item.currency_symbol }}</span>
             </div>
-            <div class="d-flex justify-content-between fw-bold mb-1"
-              *ngIf="item.service_percentage">
+            <div class="d-flex justify-content-between fw-bold mb-1" *ngIf="item.service_percentage">
               <h6>
                 رسوم الخدمة
                 <span class="main-color">
@@ -596,8 +580,7 @@
             </div>
           </div>
           <ng-container *ngIf="test && (!showPrices || showPrices)">
-            <div *ngIf="hasDeliveryOrDineIn()"
-              class="d-flex justify-content-between fw-bold">
+            <div *ngIf="hasDeliveryOrDineIn()" class="d-flex justify-content-between fw-bold">
               <h6>التوصيل:</h6>
               <span>{{ item.delivery_fees }} {{ item.currency_symbol }}</span>
             </div>
@@ -605,8 +588,7 @@
 
           <!-- Payment Method -->
           <ng-container *ngIf="test && (!showPrices || showPrices)">
-            <div
-              class="d-flex justify-content-between align-items-center fw-bold py-2">
+            <div class="d-flex justify-content-between align-items-center fw-bold py-2">
               <h6 class="mb-0">طريقة الدفع:</h6>
               <p class="mb-0">
                 {{
@@ -632,8 +614,7 @@
           <!-- Cash - visa -->
           <div *ngIf="invoices[0].transactions.length > 1">
             <div *ngFor="let inv of invoices[0].transactions">
-              <div
-                class="d-flex justify-content-between align-items-center my-1 fw-bold"
+              <div class="d-flex justify-content-between align-items-center my-1 fw-bold"
                 *ngIf="invoices[0].transactions[0].payment_status == 'paid'">
                 <div>
                   {{ inv.payment_method === "cash" ? " الكاش" : " الفيزا" }}
@@ -665,8 +646,7 @@
           <!-- Total price -->
           <ng-container *ngIf="test && (!showPrices || showPrices)">
             <div class="total-price my-2" *ngFor="let item of invoiceSummary">
-              <div
-                class="d-flex justify-content-between align-items-center fw-bold">
+              <div class="d-flex justify-content-between align-items-center fw-bold">
                 <h6 class="fw-bold">المجموع الكلي:</h6>
                 <span>{{ item.total_price }} {{ item.currency_symbol }}</span>
               </div>
@@ -675,8 +655,7 @@
 
           <!-- Payment Status -->
 
-          <div *ngIf="item.tax_application"
-            class="include-tax d-flex justify-content-between fw-bold">
+          <div *ngIf="item.tax_application" class="include-tax d-flex justify-content-between fw-bold">
             <small> سعر الوجبات يشتمل على ضريبة القيمة المضافة </small>
           </div>
         </div>
@@ -734,10 +713,8 @@
 
       <h6 class="text-center my-3">شكرا لثقتكم بخدمتنا</h6>
 
-      <div
-        class="card-img-qr d-flex justify-content-center align-items-center mb-3">
-        <img src="assets/images/qrcode.png" alt="مطعم الكوت"
-          class="img-fluid" />
+      <div class="card-img-qr d-flex justify-content-center align-items-center mb-3">
+        <img src="assets/images/qrcode.png" alt="مطعم الكوت" class="img-fluid" />
       </div>
 
       <div class="tax-num text-start">
@@ -750,7 +727,5 @@
       icon="pi pi-exclamation-triangle"
     ></p-confirmDialog> -->
 
-  <app-confirm-dialog #confirmPrintDialog (actionResult)="printInvoice($event)"
-    [header]="'تأكيد'"
-    message='هل هذه الطباعة النهائية؟' [acceptLabel]="'نعم'"
-    [rejectLabel]="'لا'"></app-confirm-dialog>
+  <app-confirm-dialog #confirmPrintDialog (actionResult)="printInvoice($event)" [header]="'تأكيد'"
+    message='هل هذه الطباعة النهائية؟' [acceptLabel]="'نعم'" [rejectLabel]="'لا'"></app-confirm-dialog>
